# CantStopProject

./: BadChoice.cpp  BadChoice.hpp  BadPlayer.cpp  BadPlayer.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Column.cpp  Column.hpp  Dice.cpp  Dice.hpp  Enums.cpp  Enums.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  fakeDice.txt  main.cpp  tools.cpp  tools.hpp
